# poetexample

./: example.parquet  pyproject.toml
example2/: __init__.py  example.py
tests/: test_example2.py
